--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
+      integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>White Rabbit Group</title>
+  </head>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Code and Hue</title>
-</head>
+  <body>
+    <!--Navigation start-->
+    <nav class="navigation"  id="navbar">
+      <div class="container">
+        <div class="logo-block">
+          <a href="#" class="logo">
+            <img src="./static/svg/Logo.svg" alt="logo" class="logo_link" />
+          </a>
+        </div>
+      </div>
+    </nav>
+    <!--Navigation end-->
 
-<body>
-  <h1>Code and hue</h1>
-  <a href="/page.html">Link to my other page</a>
+    <!--Banner start-->
+    <section class="banner">
+      <div class="container">
+        <div class="flex">
+          <div class="flex__leftblock">
+            <h1 class="banner-heading">
+              Lorem ipsum dolor sit amet consectetur
+            </h1>
+            <h2 class="banner-subheading">
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </h2>
+            <a href="" class="button">Sign Up Now</a>
+          </div>
 
-  <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
+          <div class="flex__rightblock">
+            <div class="bannerslider">
+              <img
+                src="./static/png/Group.png"
+                alt="slider"
+                class="bannerslider__img"
+              />
+              <img
+                src="./static/png/Group.png"
+                alt="slider"
+                class="bannerslider__img"
+              />
+              <img
+                src="./static/png/Group.png"
+                alt="slider"
+                class="bannerslider__img"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Banner end-->
 
-</body>
+    <!--contact form section starts-->
+    <section class="contactform">
+      <div class="container">
+        <div class="contactform_block">
+          <form action="/action_page.php">
+            <h2 class="contactform-heading">Contact us</h2>
+            <p class="contactform-subheading">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+            <div class="form-block">
+              <div class="form-block_wrapper">
+                <label class="label" for="name">Name</label>
+                <input
+                  class="input"
+                  type="text"
+                  id="name"
+                  name="name"
+                  required
+                />
+              </div>
 
+              <div class="form-flex">
+                <div class="form-block_wrapper">
+                  <label class="label" for="email">Email</label>
+                  <input
+                    class="input"
+                    type="email"
+                    id="email"
+                    name="email"
+                    required
+                  />
+                </div>
+
+                <div class="form-block_wrapper">
+                  <label class="label" for="email">Phone number</label>
+                  <input
+                    class="input"
+                    type="number"
+                    id="phone"
+                    name="phone"
+                    required
+                  />
+                </div>
+              </div>
+
+              <div class="form-block_wrapper">
+                <label class="label" for="topic">Choose a topic</label>
+                <select class="input" name="topic" id="topic">
+                  <option value="select">Select one...</option>
+                  <option value="frontend">Frontend Developer</option>
+                  <option value="backend">Backend Developer</option>
+                  <option value="fullstack">Fullstack Developer</option>
+                </select>
+              </div>
+
+              <div class="form-block_wrapper">
+                <label class="label" for="message">Message</label>
+                <textarea
+                  class="input area"
+                  type="textarea"
+                  placeholder="Type your message..."
+                  id="message"
+                  name="message"
+                ></textarea>
+              </div>
+              <div class="submit-block">
+                <input class="button" type="submit" value="Submit" />
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!--contact form section ends-->
+    <!--script start-->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+      integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </body>
 </html>
