--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Explore innovative solutions and discover the latest trends in technology with White Rabbit Group. Our team specializes in crafting cutting-edge software for your business needs. Join us on the journey of transforming ideas into impactful digital experiences.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,7 +46,7 @@
               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </h2>
-            <a href="" class="button">Sign Up Now</a>
+            <a href="#contact" class="button">Sign Up Now</a>
           </div>
 
           <div class="flex__rightblock">
@@ -73,7 +74,7 @@
     <!--Banner end-->
 
     <!--contact form section starts-->
-    <section class="contactform">
+    <section id="contact" class="contactform">
       <div class="container">
         <div class="contactform_block">
           <form action="/action_page.php">
